--- a/styles/override.css
+++ b/styles/override.css
@@ -1,15 +1,15 @@
-li {
-    background: none !important;
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-ul, ol {
+ul.snowfall, ol.snowfall {
     list-style: initial !important;
     font-size: medium !important;
     line-height: 1.5 !important;
 }
 
-hr {
+ul.snowfall > li, ol.snowfall > li {
+    background: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+hr.snowfall {
     max-width: none !important;
 }
