--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,70 @@
-/* styly ve složce styles/ se zakompliují automaticky */
+.seznam-kapitol {
+    list-style:
+}
+
+.seznam-otazek {
+    list-style-type: circle;
+}
+
+.otazka::before {
+    display: none;
+}
+
+.zpatky a {
+    font-size: 80%;
+    vertical-align: 0.2em;
+    text-decoration: none;
+    white-space: pre;
+}
+
+.kapitola-nazev {
+    padding-top: 10px;
+    font-size: 20px;
+}
+
+h1::before {
+    display: block;
+    content: " ";
+    margin-top: -50px;
+    height: 50px;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+h2::before {
+    display: block;
+    content: " ";
+    margin-top: -40px;
+    height: 40px;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+#obsah::before {
+    display: block;
+    content: " ";
+    margin-top: -40px;
+    height: 40px;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+#sel {
+    text-align: center;
+    padding: 5px;
+}
+
+#selector {
+    max-width: 100%;
+    margin: auto;
+}
+
+#map {
+    height: 400px;
+}
+#ttip {
+    text-align: center;
+    margin-top: 5px;
+    width: 100%;
+    min-height: 50px;
+}
